dynamics components properties

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,13 +1,13 @@
 <div class="container__big-card">
     <div class="big-card__photo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/M31_09-01-2011_%28cropped%29.jpg" alt="" height="200px">
+        <img src="{{photoCover}}" alt="" height="200px">
     </div>
 
     <div class="big-card__title">
-        <h1><a href="#">New angular version out!</a></h1>
+        <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
 
     <div class="big-card__description">
-        <p><a href="#">I'm just testing a few stuff around here.At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias.</a></p>
+        <p><a href="#">{{cardDescription}}</a></p>
     </div>
 </div>
