--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,15 @@
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
+
 <app-menu-title></app-menu-title>
 <div class="container__articles">
     <div class="articles__main">
-        <app-big-card photoCover="https://upload.wikimedia.org/wikipedia/commons/c/c2/M31_09-01-2011_%28cropped%29.jpg" cardTitle="James Web succesfully launched!" cardDescription="NASA announces good news about their new satellite."></app-big-card>
+        <app-big-card Id="1" photoCover="https://upload.wikimedia.org/wikipedia/commons/c/c2/M31_09-01-2011_%28cropped%29.jpg" cardTitle="James Webb succesfully launched!" cardDescription="NASA announces good news about their new satellite."></app-big-card>
 
     </div>
     <div class="articles__others">
-        <app-small-card photoCover="https://static.independent.co.uk/2022/01/26/10/Andromeda_Galaxy_David-Deddy-Dayag_WEB.jpg?width=1200&height=900&fit=crop" cardTitle="Everything about Andromeda"></app-small-card>
+        <app-small-card Id="2" photoCover="https://static.independent.co.uk/2022/01/26/10/Andromeda_Galaxy_David-Deddy-Dayag_WEB.jpg?width=1200&height=900&fit=crop" cardTitle="Everything about Andromeda"></app-small-card>
         
-        <app-small-card photoCover="https://thumbnailer.mixcloud.com/unsafe/390x390/extaudio/a/b/2/e/ccf1-b9e6-4fea-be0e-e7b6433e2102.jpg" cardTitle="New informations about KEPLER-18"></app-small-card>
+        <app-small-card Id="3" photoCover="https://thumbnailer.mixcloud.com/unsafe/390x390/extaudio/a/b/2/e/ccf1-b9e6-4fea-be0e-e7b6433e2102.jpg" cardTitle="New informations about KEPLER-18"></app-small-card>
         
-        <app-small-card photoCover="https://images.squarespace-cdn.com/content/v1/5fa5ec79661ee904d2973ca0/1678485398405-OKROXIFVOQ5PTA1KZ8SS/supernova.png" cardTitle="20 facts about Supernova"></app-small-card>
+        <app-small-card Id="4" photoCover="https://images.squarespace-cdn.com/content/v1/5fa5ec79661ee904d2973ca0/1678485398405-OKROXIFVOQ5PTA1KZ8SS/supernova.png" cardTitle="20 facts about Supernova"></app-small-card>
     </div>
 </div>
